public/css/index.css
/* general */
body {
  margin: 0 0 auto;
  padding: 8px;
}

.mobile {
  display: none;
}

* {
  scroll-margin-top: 18px;
}

.container-centered {
  text-align: center;
}

.break-words {
  -ms-word-break: break-all;
  -ms-word-wrap: break-all;
  -webkit-word-break: break-word;
  -webkit-word-wrap: break-word;
  word-break: break-word;
  word-wrap: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  hyphens: auto;
}

hr {
  clear: both;
}

/* root/general */
.logo {
  vertical-align: middle;
}

.page-root .box {
  min-width: 256px;
  max-width: 768px;
  width: 100%;
}

.page-root table {
  margin: 0 auto;
  width: 100%;
}

.page-root table td {
  /* TODO: align td contents... how? */
}

.page-root .box-container {
  margin-bottom: 8px;
}

.box {
  display: inline-block;
  border: 1px solid;
}

.box-title {
  text-align: left;
  font-size: large;
  padding-left: 0.5em;
  padding-right: 0.5em;
}

.box-title a {
  text-decoration: none;
}

.box-content {
  text-align: left;
  padding: 0.5em;
}

.icon {
  display: inline-block;
  width: 16px;
  height: 16px;
  padding: 0px 4px 0px 4px;
  margin: 0;
  vertical-align: middle;
}

.fixed-window {
  z-index: 10;
}

#quickreplywindow {
  min-width: 300px;
}

#quickreplywindow input[name="subject"] {
  width: 85% !important;
}

#quickreplywindow input[type="submit"] {
  width: 15%;
}

#quickreplywindow input[type="text"],
#quickreplywindow input[type="password"],
#quickreplywindow .form-post-message {
  width: 100%;
  box-sizing: border-box;
}

.dropdown-toggle-open {
  transform: rotate(90deg);
}

/* banner */
div.banner {
  clear: both;
}

div.banner img {
  max-width: 100%;
  height: auto;
}

/* header */
div.header {
  clear: both;
}

div.header h1 {
  margin: 0;
}

div.header p {
  margin: 0;
}

/* footer */
.footer {
  font-size: small;
  clear: both;
}

.footer .disclaimer {
  font-size: x-small;
}

/* board */
div.mode {
  text-align: center;
  width: 100%;
}

/* post */
.thread {
  display: block;
}

.reply-container, .post.reply {
  display: table;
  margin-bottom: 2px;
}

.post-hidden-label {
  color: #707070;
  font-style: italic;
}

div.post-dash {
  float: left;
  padding-right: 2px;
}

span.post-board {
  font-weight: bolder;
  font-size: large;
}

span.post-subject {
  font-weight: bolder;
}

span.post-name {
  font-weight: bold;
}

span.post-hashid-hash {
  border-radius: 2px;
}

div.file-info {
  display: block;
}

div.file-thumb {
  display: block;
  float: left;
  margin-right: 25px;
}

div.file-thumb img {
  display: block;
}

div.post-info {
  display: inline-block;
}

div.post-info img {
  vertical-align: sub;
}

span.post-id a {
  text-decoration: none;
}

div.post div.post-message-wrapper {
  display: block;
}

div.reply div.post-message-wrapper {
  display: block;
  margin-left: 25px;
  margin-right: 25px;
}

div.post-message {
  display: block;
  margin: 1em 0px;
}

div.post-message .spoiler {
  color: transparent;
  text-decoration: none;
}

div.post-message .spoiler:hover {
  color: inherit;
  text-shadow: none;
}

.post-message pre {
  font-family: DejaVu Sans Mono, monospace;
  display: inline-block;
  max-height: 400px;
  max-width: 960px;
  margin: 0px;
  padding: 5px;
  overflow-x: auto;
  border: 1px dashed;
}

.post-message .banned {
  font-weight: bold;
}

.post-message .edited {
  font-weight: bold;
}

.post-message .deleted {
  font-weight: bold;
}

.catalog {
  text-align: center;
}

div.post-catalog {
  display: inline-block;
  width: 150px;
  max-height: 320px;
  text-align: center;
  margin: 8px;
  vertical-align: top;
  overflow: hidden;
}

.post-catalog-board {
  font-size: small;
  font-weight: bold;
}

.post-catalog-name {
  font-size: small;
  font-weight: bold;
}

.post-catalog-id {
  font-size: small;
}

div.post-catalog-meta {
  display: block;
  font-size: small;
}

div.post-catalog-title {
  display: block;
  font-size: small;
}

span.post-catalog-subject {
  font-weight: bold;
}

.post-catalog-link > img {
  box-shadow: 0 0 5px rgba(0, 0, 0, .25);
}

/* board-filter */
.board-filter {
  text-align: center;
}

#board-filter-toggle-arrow {
  display: inline-block;
  text-decoration: none;
  text-align: center;
  transition: transform 0.1s;
}

span.board-filter-label {
  white-space: nowrap;
}

div.board-filter-controls {
  padding-top: 8px;
  text-align: center;
}

/* deleteform */
div.deleteform-group {
  float: right;
}

/* menubar */
.menubar {
  margin-bottom: 32px;
}

.menubar select {
  font-size: 100%;
  padding: 0px;
  border: none;
}

.menubar .boardlist {
  float: left;
}

.menubar .boardmenu {
  float: right;
}

.menubar-detached {
  position: fixed;
  left: 0px;
  right: 0px;
  top: 0px;
  background: inherit;
  z-index: 1;
}

/* dropdown menu */
a.dd-menu-btn {
  display: inline-block;
  text-decoration: none;
  text-align: center;
  transition: transform 0.1s;
}

div.dd-menu {
  position: absolute;
}

div.dd-menu ul {
  list-style: none;
  padding: 0;
  margin: 0;
  white-space: nowrap;
}

div.dd-menu li {
  cursor: pointer;
  position: relative;
  padding: 2px 4px;
}

/* post preview */
div.post-preview {
  position: fixed;
  text-align: initial;
}

div.post-preview > div.post {
  display: table;
  margin-bottom: 0px;
}

div.post-preview > div.post.reply > div.reply  {
  margin-bottom: 0px;
}

/* forms */
.form {
  text-align: left;
  overflow-x: auto;
}

.form td {
  vertical-align: middle;
}

.form-post table {
  margin: 0 auto;
}

.form-report table {
  margin: 0 auto;
}

.form-login table {
  margin: 0 auto;
}

.form-import fieldset {
  display: inline-block;
  vertical-align: top;
}

.form-rebuild fieldset {
  display: inline-block;
  vertical-align: top;
}

.form-refresh fieldset {
  display: inline-block;
  vertical-align: top;
}

.form-list {
  font-family: sans-serif;
  font-size: x-small;
}

.form-list ul {
  margin: 0;
  padding: 0;
}

.form-list ul li {
  margin-left: 1em;
}

div.h-captcha {
  min-width: 303px;
  min-height: 81px;
}

.form-post-message {
  margin: 0;
  min-width: 240px;
  min-height: 120px;
  max-width: 960px;
  max-height: 480px;
}

input,
textarea,
select,
button {
  border-radius: 0;
}

input:focus,
textarea:focus {
  outline: none;
}

/* post form kaomoji */
.kaomoji-toggle {
  text-align: left;
  text-decoration: none;
}

.kaomoji-toggle-arrow {
  display: inline-block;
  text-decoration: none;
  text-align: center;
  transition: transform 0.1s;
}

.kaomoji-container {
  max-width: 256px;
}

.kaomoji-btn {
  padding: 2px;
  margin: 0px;
  line-height: 1;
  font-size: x-small;
  box-sizing: border-box;
}

/* manage */
.form-manage table, .form-manage th, .form-manage td {
  border-collapse: collapse;
}

table.form-manage-table {
  width: 100%;
  margin: 4px auto 4px auto;
}

.form-manage th {
  text-align: left;
}

.form-manage td {
  text-align: left;
  vertical-align: top;
}

.form-manage td * {
  padding: 0px;
}

/* animations */
@keyframes marquee {
  0%   { transform: translate(100%, 0); }
  100% { transform: translate(-100%, 0); }
}

/* ban preview popup */
.ban-preview-trigger {
  position: relative;
}

.ban-preview-popup {
  display: none;
  position: fixed;
  z-index: 100;
}

.ban-preview-trigger.active .ban-preview-popup {
  display: block;
}

.ban-preview-popup .post-info {
  display: block;
  white-space: nowrap;
}

.ban-preview-popup > div.post.reply {
  display: table;
  margin-bottom: 0;
}

.ban-preview-popup > div.post.reply > div.reply {
  margin-bottom: 0;
}

/* gallery component */
.gallery-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  overflow-y: auto;
  max-height: 100vh;
}

.gallery-item {
  flex: 1 0 auto;
  margin: 1px;
  padding: 0;
  max-width: 100%;
  justify-content: center;
}

.gallery-image {
  width: 100%;
  object-fit: contain;
  object-position: center;
}

